content/modules/ROOT/examples/sync-waves/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-waves
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
