content/modules/ROOT/examples/sync-waves/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgd
  namespace: demo-waves
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd
  template:
    metadata:
      labels:
        app: bgd
    spec:
      containers:
      - name: bgd
        image: quay.io/rhdevelopers/bgd:1.0.0
        ports:
        - containerPort: 8080
