content/modules/ROOT/examples/sync-waves/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: demo-waves
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: registry.redhat.io/rhel9/postgresql-15:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: demo-waves
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
